# LinearMath

./: .gitignore  .gitmodules  CMakeLists.txt  LinearMath.sln  LinearMath.vcxproj  LinearMath.vcxproj.filters  main.cpp
include/: Debug.h  Definitions.h  Matrix3.h  Matrix4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h
src/: Matrix3.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
test/: test.cpp  test.vcxproj
